# common-motion-2d-reg

./: Cargo.toml  README.md
backup/: augmented.txt  augmented_backup.txt  augmented_perc.txt  augmented_perc_stretched.txt  test.txt  test_backup.txt  test_perc.txt  test_perc_stretched.txt
src/: dataset.rs  inference.rs  interface.rs  lib.rs  main.rs  model.rs  training.rs
