[package]
name = "common-motion-2d-reg"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.15.0", features = ["wgpu", "dataset", "network", "train"] }
serde = "1.0.215"
serde_json = "1.0.133"
rayon = "1.10.0"
derive-new = "0.7.0"
csv = "1.3.1"
rand = "0.8.5"
itertools = "0.14.0"